--- a/.github/workflows/grype.yaml
+++ b/.github/workflows/grype.yaml
@@ -3,7 +3,7 @@ name: Grype scan
 on:
   workflow_call:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
