--- a/.github/workflows/grype.yaml
+++ b/.github/workflows/grype.yaml
@@ -33,15 +33,15 @@ jobs:
         fail-build: false
         output-format: sarif
         
-    - name: Save the json file vulnerability report
+    - name: Save the json vulnerability report to an artifact
       uses: actions/upload-artifact@master
       if: always()
       with:
         name: grype_results.json
-        path: ./grype_results.json
+        path: grype_results.json
         
     - name: Upload vulnerability report to github security scanning
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ${{ steps.scan2.outputs.sarif }}  
       
