--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -36,13 +36,13 @@ jobs:
           format: 'json'
           output: 'trivy-results.json'
           
-      - name: Upload json to the artifact
+      - name: Save the json vulnerability report to an artifact
         uses: actions/upload-artifact@v4
         with:
           name: trivy-results.json
           path: trivy-results.json
           
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
