added if-no-files-found command back

--- a/.github/workflows/grype.yaml
+++ b/.github/workflows/grype.yaml
@@ -39,6 +39,7 @@ jobs:
       with:
         name: grype_results.json
         path: grype_results.json
+        if-no-files-found: warn
         
     - name: Upload vulnerability report to github security scanning
       uses: github/codeql-action/upload-sarif@v3
