--- a/.github/workflows/grype.yaml
+++ b/.github/workflows/grype.yaml
@@ -23,7 +23,7 @@ jobs:
       uses: anchore/scan-action@v3
       id: scan
       with:
-        path: 
+        severity-cutoff: critical
         fail-build: false
         output-format: json
         
@@ -31,6 +31,7 @@ jobs:
       uses: anchore/scan-action@v3
       id: scan2
       with:
+        severity-cutoff: critical
         fail-build: false
         output-format: sarif
         
