--- a/.github/workflows/grype.yaml
+++ b/.github/workflows/grype.yaml
@@ -23,16 +23,16 @@ jobs:
       uses: anchore/scan-action@v3
       id: scan
       with:
-        severity-cutoff: critical
         fail-build: false
-        output-format:  grype_results.json
+        add-cpes-if-none: true
+        output-format:  json
         
     - name: Running a scan with an sarif file as an output
       uses: anchore/scan-action@v3
       id: scan2
       with:
-        severity-cutoff: critical
         fail-build: false
+        add-cpes-if-none: true
         output-format:  sarif
         
     - name: Save the json vulnerability report to an artifact
@@ -40,7 +40,7 @@ jobs:
       if: always()
       with:
         name: grype_results.json
-        path: ./grype_results.json
+        path: ${{ steps.scan.outputs.json }}  
         
     - name: Upload vulnerability report to github security scanning
       uses: github/codeql-action/upload-sarif@v3
