--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -19,18 +19,18 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Snyk CLI to check for security issues
-        # Snyk can be used to break the build when it detects security issues.
-        # In this case we want to upload the SAST issues to GitHub Code Scanning
-        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      - name: Set up Snyk CLI to check for security issues
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
         env:
-          # This is where you will need to introduce the Snyk API token created with your Snyk account
+        # This is where you will need to introduce the Snyk API token created with your Snyk account
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
       - name: Authenticating snyk
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
-        # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
+        
         # Use || true to not fail the pipeline
       - name: Snyk Code test
         run: snyk test --all-projects --json > snyk_results.json || true
@@ -38,18 +38,23 @@ jobs:
       - name: Snyk Code test
         run: snyk test --all-projects --sarif > snyk-code.sarif || true
 
-
       - name: Save the json file vulnerability report
         uses: actions/upload-artifact@master
         if: always()
         with:
-          name: s_results.json
+          name: snyk_results.json
           path: ./snyk_results.json
+                    
+      - name: Save the json file vulnerability report
+        uses: actions/upload-artifact@master
+        if: always()
+        with:
+            name: snyk_results.sarif
+            path: ./snyk_results.sarif
         
-
         # Push the Snyk Code results into GitHub Code Scanning tab
       - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk-code.sarif
       
