--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -35,6 +35,7 @@ jobs:
           scan-type: 'fs'
           format: 'json'
           output: 'trivy-results.json'
+          severity: 'LOW,MEDIUM,CRITICAL,HIGH'
           
       - name: Save the json vulnerability report to an artifact
         uses: actions/upload-artifact@v4
