--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -42,7 +42,7 @@ jobs:
           name: snyk_results.json
           path: ./snyk_results.json
         
-        # Push the Snyk Code results into GitHub Code Scanning tab
+        # Push the Snyk results into GitHub Code Scanning tab
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
