--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -50,4 +50,5 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk-code.sarif
+          category: snyk
       
