updated the path where the json report gets saved

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: trivy-results.json
-          path: trivy-results.json
+          path: ./trivy-results.json
           
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
