--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -9,41 +9,41 @@ permissions:
   contents: read
 
 jobs:
-  Trivy-Scan:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    name: Build
-    runs-on: "ubuntu-20.04"
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Running a scan with a sarif file as an output
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
-          output: 'trivy-results.sarif'
-          severity: 'LOW,MEDIUM,CRITICAL,HIGH'
+    Trivy-Scan:
+      permissions:
+        contents: read # for actions/checkout to fetch code
+        security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+        actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      name: Build
+      runs-on: "ubuntu-20.04"
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
           
-      - name: Running a scan with a json file as an output
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          format: 'json'
-          output: 'trivy-results.json'
-          severity: 'LOW,MEDIUM,CRITICAL,HIGH'
-          
-      - name: Save the json vulnerability report to an artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-results.json
-          path: ./trivy-results.json
-          
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
+        - name: Running a scan with a sarif file as an output
+          uses: aquasecurity/trivy-action@master
+          with:
+            scan-type: 'fs'
+            format: 'template'
+            template: '@/contrib/sarif.tpl'
+            output: 'trivy-results.sarif'
+            severity: 'LOW,MEDIUM,CRITICAL,HIGH'
+            
+        - name: Running a scan with a json file as an output
+          uses: aquasecurity/trivy-action@master
+          with:
+            scan-type: 'fs'
+            format: 'json'
+            output: 'trivy-results.json'
+            severity: 'LOW,MEDIUM,CRITICAL,HIGH'
+            
+        - name: Save the json vulnerability report to an artifact
+          uses: actions/upload-artifact@v3
+          with:
+            name: trivy-results
+            path: ./trivy-results.json
+            
+        - name: Upload Trivy scan results to GitHub Security tab
+          uses: github/codeql-action/upload-sarif@v3
+          with:
+            sarif_file: 'trivy-results.sarif'
