--- a/.github/workflows/grype.yaml
+++ b/.github/workflows/grype.yaml
@@ -33,7 +33,7 @@ jobs:
         output-format:  sarif
         
     - name: Save the json vulnerability report to an artifact
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: grype_results
