reverte the version of the trivy upload artifact action to v3

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -38,9 +38,9 @@ jobs:
           severity: 'LOW,MEDIUM,CRITICAL,HIGH'
           
       - name: Save the json vulnerability report to an artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: trivy-results.json
+          name: trivy-results
           path: ./trivy-results.json
           
       - name: Upload Trivy scan results to GitHub Security tab
